# dotfile

./: .gitattributes  .gitignore  .zshrc  Cargo.toml  README.md  TODO.md  build.sh  flake.nix  grub  optional.toml  settings.json  some.toml  symlink.conf  symlink.toml  theme_template.cpp
.config/Code/User/: settings.json
.config/kitty/: NightLion_v2.conf  kitty.conf
.config/yapf/: style
.themes/Custom/cinnamon/: cinnamon-dark.css
data/: neofetch.conf  yapf  yapf.toml
data/DE/sound/: logout.oga  maximize.oga  unmaximize.oga
data/grub/: grub
data/kitty/: kitty.conf
data/neofetch/: config.conf
data/vscode/: settings.json
data/zsh/: alias.zsh  autojump.zsh  conda.zsh  export.zsh  function.zsh  main.zsh  prompt.zsh  zshrc
data/zsh/Decim/: nvm.zsh  path.zsh
data/zsh/Nona/: conda.zsh  nvm.zsh  path.zsh
data/zsh/function/: git.zsh  main.zsh  sh.zsh  w2x.zsh
data/zsh/tool/: asdf.zsh  autojump.zsh  bun.zsh  flutter.zsh  main.zsh
data/zshrc/: export.zsh  main.zsh
etc/default/: grub
home-manager/: home.nix
home-manager/pkg/: bat.nix  eza.nix  git.nix
home-manager/pkg/git/: default.nix  git-identity.sh
lib/ansi/: Cargo.toml
lib/ansi/src/: lib.rs
lib/ansi/tests/: proc_macro.rs
lib/ux/: Cargo.toml
lib/ux/src/: ask.rs  lib.rs  print.rs
src/: ansi.rs  env.rs  error.rs  escape.rs  file_type.rs  main.rs  process.rs  symlink.rs  unix.rs
src/grub/: grub
src/io/: mod.rs  parse.rs  url.rs
src/parse/: error.rs  mod.rs  symlink.rs  toml_to_env.rs
src/process/: mod.rs
tests/symlink/: update.toml  update_no_title.toml
(+12 files in other folders)
